// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown closes dropdown correctly 1`] = `
<div
  className="sc-AxjAm kOQHwu"
>
  <div
    className="sc-AxirZ jnYetP"
    id="dropdown"
    onClick={[Function]}
  >
    1
    <div
      className="sc-AxhUy kPlGDZ"
    />
  </div>
  <ul
    className="sc-AxiKw kvMfMt"
  >
    <li
      className="sc-AxhCb keVaas"
      onClick={[Function]}
    >
      2
    </li>
  </ul>
</div>
`;

exports[`Dropdown opens dropdown correctly 1`] = `
<div
  className="sc-AxjAm kOQHwu"
>
  <div
    className="sc-AxirZ jnYetP"
    id="dropdown"
    onClick={[Function]}
  >
    1
    <div
      className="sc-AxhUy eufzPu"
    />
  </div>
  <ul
    className="sc-AxiKw drPEUG"
  >
    <li
      className="sc-AxhCb keVaas"
      onClick={[Function]}
    >
      2
    </li>
  </ul>
</div>
`;

exports[`Dropdown renders correctly 1`] = `
<div
  className="sc-AxjAm kOQHwu"
>
  <div
    className="sc-AxirZ jnYetP"
    id="dropdown"
    onClick={[Function]}
  >
    1
    <div
      className="sc-AxhUy kPlGDZ"
    />
  </div>
  <ul
    className="sc-AxiKw kvMfMt"
  >
    <li
      className="sc-AxhCb keVaas"
      onClick={[Function]}
    >
      2
    </li>
  </ul>
</div>
`;
